--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "21点游戏的服务器",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js"
   },
   "author": "hhk <codeforsomeone@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "socket.io": "^2.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.0.36",
+    "@types/socket.io": "^1.4.29"
   }
 }
